--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "unzip2": "^0.2.5"
   }
 }
